--- a/index.css
+++ b/index.css
@@ -5,6 +5,12 @@ body {
 #title {
     display: flex;
     justify-content: center;
+    margin-bottom: 3rem;
+}
+
+#instructions {
+    display: flex;
+    justify-content: center;
 }
 
 #content {
