--- a/index.css
+++ b/index.css
@@ -51,13 +51,13 @@ body {
 }
 
 #takeBtn {
-    background-color: red;
+    background-color: green;
     margin: 2rem;
     padding: 2rem;
 }
 
 #leaveBtn {
-    background-color: green;
+    background-color: red;
     margin: 2rem;
     padding: 2rem;
 }
@@ -70,6 +70,10 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: aliceblue;
+}
+
+.value-revealed {
+    background-color: red;
 }
 
 .case {
