--- a/index.css
+++ b/index.css
@@ -2,6 +2,10 @@ body {
     background-color: gray;
 }
 
+section {
+    display: inline-block
+}
+
 #title {
     display: flex;
     justify-content: center;
@@ -14,11 +18,16 @@ body {
 }
 
 #content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    display: grid;
+    width: auto;
+    grid-template-columns: 1fr 3fr;
     user-select: none;
+}
+
+#playArea {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #playerInfo {
@@ -32,14 +41,18 @@ body {
 #valueBoard {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    row-gap: .2rem;
+    column-gap: 1rem;
     margin-bottom: 1rem;
     width: 300px;
 }
 
 #caseBoard {
     display: grid;
+    width: 4rem;
     grid-template-columns: repeat(6, 1fr);
     gap: 1rem;
+    height: min-content;
 }
 
 #caseSelection {
@@ -70,6 +83,10 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: aliceblue;
+    border-radius: 5px;
+    border-width: 3px;
+    border-color: black;
+    border-style: ridge;
 }
 
 .value-revealed {
@@ -80,6 +97,11 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: red;
+    border-radius: 5px;
+    border-width: 3px;
+    border-color: black;
+    border-style: ridge;
+
 }
 
 .case {
