--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,12 @@
     --color-brown: #481E14;
     --color-dark-orange: #9B3922;
     --color-light-orange: #F2613F;
+    --color-light-grey: rgb(212, 212, 212);
+    --color-dark-grey: rgb(161, 161, 161);
 }
 
 body {
+    box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
     background-color: gray;
     padding: .5rem;
@@ -46,8 +49,8 @@ hr {
 
 #content {
     display: grid;
-    width: auto;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 2fr 3fr;
+    justify-items: center;
     user-select: none;
 }
 
@@ -60,20 +63,20 @@ hr {
 
 #playerInfo {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column-reverse;
+    justify-content: center;
     align-items: center;
-    margin-top: 2rem;
+    width: 90%;
+    margin: 1rem 0 1rem 0;
 }
 
 #valueBoard {
     display: grid;
-    margin-left: 3rem;
     grid-template-columns: repeat(2, 1fr);
     row-gap: .2rem;
     column-gap: 1rem;
     margin-bottom: 1rem;
-    width: 300px;
+    width: 100%;
 }
 
 #caseBoard {
@@ -93,8 +96,10 @@ hr {
     justify-self: center;
     border-style: groove;
     border-radius: 5px;
-    border-color: black;
+    border-color: grey;
     border-width: 5px;
+    background-color: var(--color-light-grey);
+    box-shadow: inset 0 0 .5rem .2rem var(--color-dark-grey);
 }
 
 #takeBtn {
@@ -107,9 +112,9 @@ hr {
 
 .decision {
     font-family: 'Work Sans', sans-serif;
-    margin: 2rem;
+    margin: .5rem;
     padding: 2rem;
-    border-radius: 5px;
+    border-radius: 40%;
 }
 
 .value {
@@ -119,16 +124,18 @@ hr {
     height: 40px;
     justify-content: space-between;
     align-items: center;
-    background-color: aliceblue;
+    background-color: var(--color-light-orange);
     border-radius: 5px;
     border-width: 3px;
     border-color: black;
     border-style: ridge;
-    transition: transform 500ms linear;
+    font-weight: 800;
+    box-shadow: inset 0 0 .6rem .3rem var(--color-dark-orange);
+    transition: transform 500ms ease-in-out;
 }
 
 .value-revealed {
-    background-color: red;
+    opacity: 0.3;
 }
 
 .case {
@@ -137,6 +144,8 @@ hr {
     height: 4rem;
     grid-column: span 2;
     border-radius: 5px;
+    background-color: var(--color-light-grey);
+    box-shadow: inset 0 0 .5rem .2rem var(--color-dark-grey);
 }
 
 .case-revealed {
@@ -166,11 +175,11 @@ hr {
     #content {
         display: flex;
         flex-direction: column-reverse;
+        align-items: center;
     }
 
     #valueBoard {
         margin: 0 0 2rem 0;
-        width: auto;
     }
 
     #caseBoard {
