--- a/styles.css
+++ b/styles.css
@@ -137,14 +137,18 @@ hr {
     width: 30rem;
     height: 20rem;
     font-size: 5rem;
+    text-shadow: 0px 0px .6rem rgb(165, 165, 165);
 }
 
 #mcV {
     display: flex;
+    justify-self: center;
     font-weight: 700;
     background-color: rgb(26, 26, 26);
-    width: 100%;
-    padding: 0 .5rem .5rem 0;
+    padding-inline: 15rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border: double rgb(73, 73, 73);
 }
 
 #mcC {
