--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,11 @@ hr {
     border-radius: 5px;
     background-color: var(--color-light-grey);
     box-shadow: inset 0 0 .5rem .2rem var(--color-dark-grey);
+    transition: all ease 200ms;
+}
+
+.case:hover {
+    transform: translateY(-5px);
 }
 
 .case-revealed {
