--- a/styles.css
+++ b/styles.css
@@ -104,8 +104,8 @@ hr {
     justify-content: center;
     align-items: flex-end;
     font-family: 'Work Sans', sans-serif;
-    width: max(30rem, 90%);
-    height: min(20rem, 60%);
+    width: 30rem;
+    height: 20rem;
     border: groove 7px black;
     border-radius: 10px;
     overflow: hidden;
@@ -169,7 +169,8 @@ hr {
     justify-self: center;
     border-style: groove;
     border-radius: 5px;
-    border-color: grey;
+    border-color: black;
+    color: black;
     border-width: 5px;
     background-color: var(--color-light-grey);
     box-shadow: inset 0 0 .5rem .2rem var(--color-dark-grey);
@@ -196,7 +197,7 @@ hr {
 }
 
 #bankerOffer {
-    width: min(30rem, 80%);
+    width: 30rem;
     font-family: 'Bruno Ace SC', sans-serif;
     color: white;
 }
@@ -269,6 +270,7 @@ hr {
     font-family: 'Work Sans', sans-serif;
     font-size: 1.3rem;
     font-weight: 700;
+    color: black;
     width: 5rem;
     height: 4rem;
     grid-column: span 2;
@@ -313,7 +315,7 @@ hr {
     }
 
     #valueBoard {
-        margin: 0 0 2rem 0;
+        margin: 2rem 0 2rem 0;
     }
 
     #caseBoard {
@@ -322,15 +324,32 @@ hr {
 }
 
 @media (max-width: 580px) {
+
+    #title {
+        font-size: 2rem;
+    }
+
+    #instructions {
+        font-size: 1.5rem;
+    }
     #caseBoard{
         grid-template-columns: repeat(8, minmax(auto, 1rem));
+    }
+
+    #masterCase {
+        width: 90vw;
+        font-size: 3rem;
+    }
+
+    #bankerOffer {
+        width: auto;
     }
 
     .case {
         font-size: 1.3rem;
         font-weight: 700;
-        width: 4.5rem;
-        height: 3.5rem;
+        width: 4rem;
+        height: 3rem;
         grid-column: span 2;
         border-radius: 5px;
         background-color: var(--color-light-grey);
